Major Fixes and Additions
Inclusion of Midi Support (for now specific to one device, but it's there)

Fixed rendering issues with Contexts

Changed default sizing to be 1:1

Fullscreen is default